tests-integration/fixtures/checking/1772440380_prim_row_apart/Main.snap
---
source: tests-integration/tests/checking/generated.rs
assertion_line: 28
expression: report
---
Terms
unionTypeMismatch ::
  forall (l :: Row Type).
    Union @Type (l :: Row Type) ( b :: String ) ( a :: Int, b :: Int ) =>
    Proxy @(Row Type) (l :: Row Type)
consMissingLabel ::
  forall (t :: Row Type).
    Cons @Type "missing" Int (t :: Row Type) ( a :: Int, b :: String ) =>
    Proxy @(Row Type) (t :: Row Type)
lacksPresent ::
  Lacks @Type "b" ( a :: Int, b :: String ) => Proxy @(Row Type) ( a :: Int, b :: String )
forceSolve ::
  forall (t4 :: Row Type).
    { consMissingLabel :: Proxy @(Row Type) (t4 :: Row Type)
    , lacksPresent :: Proxy @(Row Type) ( a :: Int, b :: String )
    , unionTypeMismatch :: Proxy @(Row Type) ( a :: Int )
    }

Types

Diagnostics
error[CannotUnify]: Cannot unify 'String' with 'Int'
  --> 15:1..19:4
   |
15 | forceSolve =
   | ^~~~~~~~~~~~
error[CannotUnify]: Cannot unify '( b :: String )' with '( b :: Int )'
  --> 15:1..19:4
   |
15 | forceSolve =
   | ^~~~~~~~~~~~
error[CannotUnify]: Cannot unify '( a :: Int, b :: String )' with '( missing :: Int | ?27 )'
  --> 15:1..19:4
   |
15 | forceSolve =
   | ^~~~~~~~~~~~
error[NoInstanceFound]: No instance found for: Lacks @Type "b" ( a :: Int, b :: String )
  --> 15:1..19:4
   |
15 | forceSolve =
   | ^~~~~~~~~~~~
